@@ -22,6 +22,7 @@ Changes in Bitbake 1.9.x:
 	  (requires new FETCHCMD_svn definition in bitbake.conf)
 	- Change SVNDIR layout to be more unique (fixes #2644 and #2624)
 	- Add ConfigParsed Event after configuration parsing is complete
+	- Add SRCREV support for svn fetcher
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
